crates/swc/tests/errors/module/esnext/export-assign/.swcrc
{
    "$schema": "http://json.schemastore.org/swcrc",
    "jsc": {
        "parser": {
            "syntax": "typescript"
        },
        "target": "es2020"
    },
    "module": {
        "type": "es6"
    }
}